--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -252,9 +252,32 @@ body {
   border-color: #4a90e2;
 }
 
-.selected-course-input,
-.schedule-course-input {
+
+.selected-course-row {
+  display: flex;
+  flex-direction: row;
+  align-content: space-between;
+}
+
+.selected-course-input {
+  padding: 10px;
   width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 0.9rem;
+  background: #f9f9f9;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.schedule-course-row {
+  display: flex;
+  flex-direction: row;
+  align-content: space-between;
+}
+
+.schedule-course-input {
+  width: 80%;
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -262,6 +285,18 @@ body {
   background: #f9f9f9;
   margin-bottom: 10px;
   color: #333;
+}
+
+.schedule-course-selector {
+  width: 20%;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.schedule-course-selector-button {
+  width: 20%;
 }
 
 .selected-course-input:last-child,
@@ -321,14 +356,14 @@ body {
 }
 
 .remove-button {
-  background: rgba(255, 255, 255, 0.3);
-  border: none;
-  color: white;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
+  border: 2px solid lightgray;
+  color: black;
+  border-radius: 4px;
+  height: 100%;
+  padding: 10px;
+  margin-left: 10px;
   cursor: pointer;
-  font-size: 1.2rem;
+  font-size: 14px;
   line-height: 1;
   display: flex;
   align-items: center;
@@ -337,7 +372,7 @@ body {
 }
 
 .remove-button:hover {
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(50, 50, 50, 0.2);
 }
 
 /* Restrictions Panel */
